--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -21,7 +21,7 @@ invert-color-include = [ ];
 #glx-use-copysubbuffermesa = false;
 #glx-no-rebind-pixmap = false;
 #glx-swap-method = "undefined";
-#vsync = true;
+vsync = true;
 
 
 #################################
@@ -30,22 +30,21 @@ invert-color-include = [ ];
 #
 #################################
 
-shadow = true;
+shadow = false;
 #no-dnd-shadow = true;
-#no-dock-shadow = true;
-shadow-radius = 20;
-shadow-opacity = 0.25;
-shadow-offset-x = -5;
-shadow-offset-y = -5;
+shadow-radius = 50;
+shadow-opacity = 1;
 shadow-red = 0.0;
 shadow-green = 0.0;
 shadow-blue = 0.0;
 shadow-exclude = [
   "class_g = 'i3-frame'",
   "class_g = 'Terminator'",
-  "class_g = 'Firefox' && argb",
   "bounding_shaped",
-  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+  "class_g = 'Kitty'",
+  "class_g = 'kitty'",
+  "window_type = 'dock'"
 ];
 
 
@@ -55,17 +54,20 @@ shadow-exclude = [
 #
 #################################
 
-blur-background = true;
-blur-background-frame = true;
-blur-background-fixed = true;
-#blur-method = "dual_kawase";
-#blur-method = "kernel";
+blur-background = false;
+blur-background-frame = false;
+blur-background-fixed = false;
+blur-method = "dual_kawase";
+# blur-method = "kernel";
 
 blur-kern = "3x3box";
-blur-method = "dual_kawase";
 blur-strength = 6;
 
-
+blur-background-exclude = [
+  "window_type = 'dock'",
+  "class_g = 'flameshot'",
+  "class_g = 'activate-linux'"
+]
 
 
 #################################
@@ -74,7 +76,7 @@ blur-strength = 6;
 #
 #################################
 
-#menu-opacity = 1;
+menu-opacity = 0.75;
 inactive-opacity = 1;
 active-opacity = 1;
 frame-opacity = 1;
@@ -102,3 +104,6 @@ glx-no-rebind-pixmap = true;
 use-damage = true;
 
 corner-radius=10;
+rounded-corners-exclude = [
+  "class_g = 'kitty'"
+]
