--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -30,21 +30,21 @@ vsync = true;
 #
 #################################
 
-shadow = false;
+shadow = true;
 #no-dnd-shadow = true;
-shadow-radius = 50;
-shadow-opacity = 1;
+shadow-radius = 30;
+shadow-opacity = 0.75;
 shadow-red = 0.0;
-shadow-green = 0.0;
-shadow-blue = 0.0;
+shadow-green = 0.05;
+shadow-blue = 0.1;
+
 shadow-exclude = [
   "class_g = 'i3-frame'",
   "class_g = 'Terminator'",
   "bounding_shaped",
   "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-  "class_g = 'Kitty'",
-  "class_g = 'kitty'",
-  "window_type = 'dock'"
+  "window_type = 'dock'",
+  "!_BSPWM_FLOATING@:32c = 1"
 ];
 
 
@@ -66,7 +66,11 @@ blur-strength = 6;
 blur-background-exclude = [
   "window_type = 'dock'",
   "class_g = 'flameshot'",
-  "class_g = 'activate-linux'"
+  "class_g = 'activate-linux'",
+  "class_g = 'discover-overlay'",
+  "class_g = 'discover_overlay'",
+  "class_g = 'Discover-overlay'",
+  "class_g = 'Dunst'"
 ]
 
 
@@ -86,13 +90,8 @@ inactive-opacity-override = true;
 
 
 
-opacity-rule = [
-      "100:class_g = 'URxvt'",
-      "100:class_g = 'Terminator'",
-      "70:class_g = 'Atom'",
-      "60:class_g = 'code-oss'",
-      "60:class_g = 'VSCodium'",
-      "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+opacity-rule = [        
+  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
 
 
@@ -105,5 +104,6 @@ use-damage = true;
 
 corner-radius=10;
 rounded-corners-exclude = [
-  "class_g = 'kitty'"
+  "class_g = 'kitty'",
+  "class_g = 'Dunst'"
 ]
